<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme_header">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/theme_entrie"
            app:entryValues="@array/theme_values"
            app:key="@string/select_app_theme_key"
            app:title="@string/select_app_theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_header">

        <SwitchPreferenceCompat
            app:key="@string/use_pin_key"
            app:title="@string/use_ping_title" />

        <com.jobsity.tvshows.view.PinEditTextPreference
            app:dependency="@string/use_pin_key"
            app:key="@string/pin_key"
            app:title="@string/set_pin_title"
            app:useSimpleSummaryProvider="false" />

        <SwitchPreferenceCompat
            app:dependency="@string/use_pin_key"
            app:key="@string/use_fingerprint_key"
            app:title="@string/use_fingerprint_title" />

    </PreferenceCategory>

</PreferenceScreen>